--- a/.github/workflows/docker-publish-and-test.yml
+++ b/.github/workflows/docker-publish-and-test.yml
@@ -27,7 +27,7 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: read
       packages: write
